updade package.json

--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "publish": "npm publish --access public"
   },
   "author": "yzhura",
+  "bugs": {
+    "url": "https://github.com/yzhura/sopen-close",
+    "email": "zhuravlev.yaroslav@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yzhura/sopen-close"
+  },
   "license": "ISC",
   "devDependencies": {
     "@rollup/plugin-eslint": "^8.0.2",
