--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple Open Close",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"No test specified\"",
     "build": "rollup -c",
     "start": "rollup -c -w",
     "publish": "npm publish --access public"
